# notes-rag

./: .gitignore  README.md  lexical.py  main.py  memory.py  pyproject.toml  styles.css  tui.py
